# syntax-highlighting

./: Makefile  addon.json  pyproject.toml
src/: Syntax Highlighting.py
src/syntax_highlighting/: __init__.py  config.py  consts.py  main.py
